---------------------------
- read enum values (see parameter CREATEFEATURETYPE4ENUM)
- check uniqueness of TID/OIDs (see param CHECK_UNIQUEOID)
- optional renumber TIDs read from ITF files to make them unique (see param ILI1_RENUMBERTID) 
- selectable encoding for additional geometry attributes (see param GEOMETRY_ENCODING)
- write gml (3.2) according to iligml encoding spec
- added *.ili to file selector
- added *.gml to file selector

ili2fme 4.9.1 (2008-11-06) 
---------------------------
- adapted to FME_GEOMETRY_HANDLING=Enhanced
- fixed spelling error in polygon building script of AREAs

ili2fme 4.9.0 (2008-10-29) 
---------------------------
- renamed reference property of SURFACE linetable to maintable (might break existing configs that use CREATE_LINETABLES=Yes)

ili2fme 4.8.3 (2008-10-16) 
---------------------------
- ili2c-3.6.8
- bug: fixed memory leak in rich geometry handling
- get rid of PIPs in ITF area builder (use OverlayFactory instead of PIPComponentsFactory)
- added additional InterectionFactories at head of ITF area builder   

ili2fme 4.8.2 (2008-06-13) 
---------------------------
- ili2c-3.6.7
- bug itf-reader: lost ili1 ref attrs
- bug: lost format attributes in wb (fixed datatype of WORKBENCH_EXPOSABLE_ATTRIBUTES in metafile)

ili2fme 4.8.1 (2008-06-12) 
---------------------------
- note: there are incompatibilities between different fme-2007/2008 builds in @Transform and DonutFactory that influence the polygon building when reading from itf files
- ili2c-3.6.6
- bug: correct mapping to fme_type lost again (format name to @Transform() seems now to be case sensitive)
- bug: NullPointerException if structattr of struct defined in an abstract topic
- bug: read enum itf-code for default value if ILI1_ADDDEFVAL && ILI1_ENUMASITFCODE

ili2fme 4.8.0 (2008-05-06) 
---------------------------
- added parameter ILI1_ENUMASITFCODE to mapping file
- added optional branch to version

iliili2fme 4.7.4 (2008-04-11) 
---------------------------